test/onceCall1_5.slq

def main(){
	x:=H(0);
	y:=dup(x);
	f:=()⇒CNOT(x,y);
	measure(x);
	return (f(),measure(f)()); /// error
}
